# sqlite_backup

./: .dockerignore  .env.erb  .env.example  .env.test  Cargo.toml  GITHUB_CHANGELOG.md  README.md  TODO.md  backup.db  cog.toml  flake.nix  source.db
.github/: dependabot.yml
.github/workflows/: action.yml  docker.yml  release.yml  rust.yml
config/: deploy.yml
docs/: CHANGELOG.md  LATEST_CHANGELOG.md  TODO.md
src/: argument.rs  backup.rs  config.rs  encrypt.rs  errors.rs  lib.rs  main.rs  uploader.rs
