[package]
name = "sqlite_backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
aws-config = "0.56.1"
aws-sdk-s3 = "0.31.1"
dotenvy = "0.15.7"
rusqlite = { version = "0.29.0", features = ["backup"] }
tempfile = "3.8.0"
time = { version = "0.3.28", features = ["formatting"] }
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }

