[package]
name = "sqlite_backup"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
aws-config = "0.56.1"
aws-sdk-s3 = "0.32.0"
clap = { version = "4.4.6", features = ["derive"] }
dotenvy = "0.15.7"
rusqlite = { version = "0.29.0", features = ["backup"] }
tempfile = "3.8.0"
time = { version = "0.3.29", features = ["formatting"] }
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }

